[package]
name = "usb2snes"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.7"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.0", features = ["attributes", "unstable"] }
async-tungstenite = { version = "*", features = ["async-std-runtime"] }
url = "2.1.1"
# Used for the cli
structopt = "0.3"
