[package]
name = "usb2snes"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"
license = "MIT"
description = "A rust library for communicating with a usb2snes server."
repository = "https://github.com/konkers/usb2snes-rs"
homepage = "https://github.com/konkers/usb2snes-rs"
readme = "README.md"


[dependencies]
failure = "0.1.8"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.5.0", features = ["attributes", "unstable"] }
async-tungstenite = { version = "0.4.2", features = ["async-std-runtime"] }
url = "2.1.1"
# Used for the cli
structopt = "0.3"
parse_int = "0.4.0"
byteorder = "1.3.4"
